<resources>
    <string name="app_name">SchoolMate</string>
    <string name="app_punchline">Your companion for a better school experience</string>
    <string name="school_navigation_title">School Navigation</string>
    <string name="zone_title_placeholder">Block A</string>
    <string name="zone_description_placeholder">Boys main living place</string>
    <string name="school_zones_loading_failed">Failed to load school zones</string>
    <string name="loading_school_zones_fetch">Loading zones…</string>
    <string name="school_navigation_location_permission_not_granted_alert_title">Location unavailable</string>
    <string name="school_navigation_location_permission_not_granted_alert_message">You have disabled location access to the app. You can still navigate the app but you cannot see your live location in the map. You can still grant permissions in the settings later.</string>
    <string name="school_navigation_location_permission_not_granted_alert_neutral_button_text">Okay</string>
    <string name="school_navigation_location_permission_educational_title">Permission required</string>
    <string name="school_navigation_location_permission_educational_message">In order to see your live location on the map, you must grant to the app the location permission. Otherwise, you will be able to navigate the map without your live location.</string>
    <string name="school_navigation_location_permission_educational_positive_button_text">Okay</string>
    <string name="school_navigation_location_permission_educational_negative_button_text">No, thanks</string>
    <string name="label_map_selector_add_button">Add point</string>
    <string name="label_map_selector_confirm_button">Confirm points</string>
    <string name="label_map_selector_reset_button">Reset points</string>
    <string name="school_zones_title">School zones</string>
    <string name="school_zone_selector_notice">Place points to delimit the area</string>
    <string name="school_zone_selector_notice_single_mode">Select a place</string>
    <string name="school_zone_editor_add_title">Add zone</string>
    <string name="school_zone_editor_edit_title">Edit zone</string>
    <string name="label_school_zone_editor_name">Name</string>
    <string name="label_school_zone_editor_description">Description</string>
    <string name="label_school_zone_editor_area">Area</string>
    <string name="label_school_zone_editor_area_change_button">Select area</string>
    <string name="label_school_zone_editor_confirm_add_button">Add</string>
    <string name="label_school_zone_editor_confirm_add_button_loading">Adding…</string>
    <string name="label_school_zone_editor_confirm_edit_button">Edit</string>
    <string name="label_school_zone_editor_confirm_edit_button_loading">Editing…</string>
    <string name="label_school_zone_editor_delete_button">Delete</string>
    <string name="label_school_zone_editor_delete_button_loading">Deleting…</string>
    <plurals name="label_school_zone_editor_chosen_points">
        <item quantity="one">1 point</item>
        <item quantity="other">%d points</item>
    </plurals>
    <string name="label_school_zone_editor_menu_add">Add zone</string>
    <string name="label_school_zone_editor_name_required">You must provide a name</string>
    <string name="label_school_zone_editor_description_required">You must provide a description</string>
    <string name="label_school_zone_editor_points_required">You must select an area</string>
    <string name="schoolmate_account">SchoolMate account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="loading_sign_in">Signing in…</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="required_email">Email is required</string>
    <string name="required_password">Password is required</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_text">Welcome to</string>
    <string name="home_welcome_text">Welcome,</string>
    <string name="home_firstname_placeholder">John</string>
    <string name="home_avatar_menu_edit_profile">Edit profile</string>
    <string name="home_avatar_menu_change_password">Change password</string>
    <string name="home_avatar_menu_logout">Logout</string>
    <string name="home_avatar_menu_logout_loading">Logging out…</string>
    <string name="home_dialog_edit_profile_firstname">Firstname</string>
    <string name="home_dialog_edit_profile_lastname">Lastname</string>
    <string name="home_dialog_edit_profile_email">Email</string>
    <string name="home_dialog_change_password_old_password">Old password</string>
    <string name="home_dialog_change_password_new_password">New password</string>
    <string name="home_dialog_change_password_confirm_password">Confirm password</string>
    <string name="error_home_dialog_change_password_old_password_required">Old password is required</string>
    <string name="error_home_dialog_change_password_new_password_required">New password is required</string>
    <string name="error_home_dialog_change_password_confirm_password_required">Confirm password is required</string>
    <string name="error_home_dialog_change_password_confirm_password_not_matching">Passwords do not match</string>
    <string name="error_home_dialog_edit_profile_firstname_required">Firstname is required</string>
    <string name="error_home_dialog_edit_profile_lastname_required">Lastname is required</string>
    <string name="error_home_dialog_edit_profile_email_required">Email is required</string>
    <string name="home_dialog_edit_profile_title">Edit profile</string>
    <string name="home_dialog_change_password_title">Change password</string>
    <string name="label_home_dialog_edit_button">Edit</string>
    <string name="label_home_dialog_edit_button_loading">Editing…</string>
    <string name="label_home_change_password_button">Change password</string>
    <string name="label_home_change_password_button_loading">Changing password…</string>
    <string name="home_dialog_change_password_success">Password changed successfully</string>
    <string name="home_dialog_change_password_error">Password could not be changed. Verify your old password</string>
    <string name="home_dialog_edit_profile_success">Profile edited successfully</string>
    <string name="home_dialog_edit_profile_error">Profile could not be edited</string>
    <string name="alerts_title">Alerts</string>
    <string name="toolbox_title">Toolbox</string>
    <string name="navigation_title">Navigation</string>
    <string name="documents_title">Documents</string>
    <string name="home_user_complaints_title">Your complaints</string>
    <string name="unknown_error_occurred">An error has occurred</string>
    <string name="action_upload_document">Upload a document</string>
    <string name="label_document_name">Name</string>
    <string name="label_document_shared">Share document with others</string>
    <string name="action_select_file">Choose a file</string>
    <string name="action_scan">Scan</string>
    <string name="action_select_tags">Select tags</string>
    <string name="action_send_upload_form">Upload</string>
    <string name="action_send_edit_form">Edit</string>
    <string name="label_tags_popup_close">Close</string>
    <string name="label_chosen_file"><b>Chosen file:</b> %s</string>
    <string name="error_document_name_empty_edittext">Name is required</string>
    <string name="error_document_file_empty">A file is required</string>
    <string name="error_wrong_field_value">Please verify your input</string>
    <string name="label_uploading_form">Uploading…</string>
    <string name="label_editing_form">Editing…</string>
    <string name="label_documents_menu_sort_fields">Sort by</string>
    <string name="label_documents_menu_sort_order">Order</string>
    <string name="label_documents_menu_sort_name">Name</string>
    <string name="label_documents_menu_sort_upload">Upload time</string>
    <string name="label_documents_menu_sort_shared">Shared</string>
    <string name="label_documents_menu_sort_asc">Ascending</string>
    <string name="label_documents_menu_sort_desc">Descending</string>
    <string name="label_documents_menu_filter">Filter</string>
    <string name="loading_document_deletion">Deleting document…</string>
    <string name="error_document_deletion">An error has occurred while deleting the document</string>
    <string name="success_document_deletion">The document has been deleted</string>
    <string name="loading_document_tag_deletion">Deleting tag…</string>
    <string name="error_document_tag_deletion_conflict">This tag is still used in another document</string>
    <string name="error_document_tag_deletion_unknown">An error has occurred while deleting the tag</string>
    <string name="success_document_tag_deletion">The tag has been deleted</string>
    <string name="loading_document_tag_addition">Adding tag…</string>
    <string name="error_document_tag_addition">An error has occurred while adding the tag</string>
    <string name="success_document_tag_addition">The tag has been added</string>
    <string name="document_item_name_placeholder">Résumé Java</string>
    <string name="document_item_date_placeholder">Yesterday</string>
    <string name="document_item_tags_placeholder">1ère année • PFA</string>
    <string name="document_item_options_menu_description">Document options</string>
    <string name="label_document_item_context_menu_download">Download</string>
    <string name="label_document_item_context_menu_edit">Edit</string>
    <string name="label_document_item_context_menu_delete">Delete</string>
    <string name="label_loading_documents_list">Loading more documents…</string>
    <string name="time_calculation_yesterday">Yesterday</string>
    <plurals name="time_calculation_hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <string name="select_type_complaint">Select complaint type</string>
    <string name="type_complaints_all">All</string>
    <string name="type_complaints_all_building">Building</string>
    <string name="type_complaints_all_room">Room</string>
    <string name="type_complaints_all_facilities">Facilities</string>
    <string name="sort_by_complaints">Sort by</string>
    <string name="newest_complaints">Newest</string>
    <string name="oldest_complaints">Oldest</string>
    <string name="complaints_status_title">Status of the complaints</string>
    <string name="label_complaint_filter_by_handler">Filter complaints by their handler</string>
    <string name="alert_add_title">Add Alert</string>
    <string name="alert_editor_title">title</string>
    <string name="alert_editor_type">type</string>
    <string name="label_alert_editor_area_change_button">Select zone</string>
    <string name="alert_edit_title">Edit Alert</string>
    <string name="alert_zone_editor_edit_button">Edit</string>
    <string name="label_alert_editor_area_pharmacy_radio_button">PHARMACY</string>
    <string name="label_alert_editor_area_thieves_radio_button">THIEVES</string>
    <string name="label_alert_editor_area_library_radio_button">LIBRARY</string>
    <string name="alert_add_title_type">Type</string>
    <string name="alert_editor">Alert editor</string>
    <string name="user_details_menu_edit_privileges">Change privilege</string>
    <string name="user_role_student">Student</string>
    <string name="user_role_moderator">Moderator</string>
    <string name="user_role_adei">ADEI</string>
</resources>