<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/select_type_complaint">
        <menu>
            <group android:id="@+id/handler_complaints_type_menu" android:checkableBehavior="single">
                <item
                    android:id="@+id/handler_complaints_type_menu_all"
                    android:checked="true"
                    android:title="@string/type_complaints_all" />
                <item
                    android:id="@+id/handler_complaints_type_menu_building"
                    android:title="@string/type_complaints_all_building" />
                <item
                    android:id="@+id/handler_complaints_type_menu_room"
                    android:title="@string/type_complaints_all_room" />
                <item
                    android:id="@+id/handler_complaints_type_menu_facilities"
                    android:title="@string/type_complaints_all_facilities" />
            </group>
        </menu>
    </item>

    <item android:title="@string/sort_by_complaints">
        <menu>
            <group android:id="@+id/handler_complaints_menu_sort" android:checkableBehavior="single">
                <item
                    android:id="@+id/handler_complaints_menu_sort_desc"
                    android:checked="true"
                    android:title="@string/newest_complaints" />
                <item
                    android:id="@+id/handler_complaints_menu_sort_asc"
                    android:title="@string/oldest_complaints" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/handler_complaints_status_menu"
        android:title="@string/complaints_status_title"
        android:icon="@drawable/ic_tag_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/handler_complaint_menu_filter_by_handler"
        android:title="@string/label_complaint_filter_by_handler"
        android:icon="@drawable/ic_filter_menu"
        app:showAsAction="ifRoom"/>
</menu>